--- a/mysql.yaml
+++ b/mysql.yaml
@@ -7,3 +7,9 @@
      name: mysql-server
      state: installed
 
+  -name: start and enable mysql
+  ansible.builtin.service:
+    name: mysqld
+    state: started
+    enabled: yes
+
