--- a/mysql.yaml
+++ b/mysql.yaml
@@ -2,6 +2,11 @@
   hosts: mysql
   become: yes
   tasks:
+  - name: inInstall mysql libraries
+    ansible.builtin.pip:
+      name: PyMySQL
+      executable: pip3.9
+      
   - name: install mysql server
     ansible.builtin.package:
      name: mysql-server
