--- a/mysql.yaml
+++ b/mysql.yaml
@@ -1,6 +1,8 @@
 - name: configure mysql server
   hosts: mysql
   become: yes
+  vars:
+    mysql_root_password: ExpenseApp@1
   tasks:
   - name: Install mysql libraries
     ansible.builtin.pip:
@@ -34,6 +36,6 @@
       msg: "MySQL info: {{mysql_info}}"
 
   - name: setup root password
-    ansible.builtin.command: "mysql_secure_installation --set-root-pass ExpenseApp@1 "
+    ansible.builtin.command: "mysql_secure_installation --set-root-pass {{ mysql_root_password }} "
     when: mysql_info.failed is true
 
