--- a/mysql.yaml
+++ b/mysql.yaml
@@ -4,20 +4,20 @@
   vars:
     mysql_root_password: ExpenseApp@1
   tasks:
-  - name: Install MySQL libraries
+  - name: Install mysql libraries
     ansible.builtin.pip:
       name: "{{ item }}"
       executable: pip3.9
-    loop:
+    loop: 
     - cryptography
     - PyMySQL
 
-  - name: Install MySQL server
+  - name: install mysql server
     ansible.builtin.package:
-      name: mysql-server
-      state: installed
+     name: mysql-server
+     state: installed
 
-  - name: start and enable mysql server
+  - name: start and enable mysql
     ansible.builtin.service:
       name: mysqld
       state: started
@@ -27,14 +27,15 @@
     community.mysql.mysql_info:
       login_user: root
       login_password: "{{ mysql_root_password }}"
-      login_host: mysql.daws82s.online
+      login_host: mysql.vinodshetty.online
     register: mysql_info
     ignore_errors: true
 
   - name: print the output
     ansible.builtin.debug:
-      msg: "MySQL info: {{ mysql_info }}"
+      msg: "MySQL info: {{mysql_info}}"
 
   - name: setup root password
-    ansible.builtin.command: " mysql_secure_installation --set-root-pass {{ mysql_root_password }} "
+    ansible.builtin.command: "mysql_secure_installation --set-root-pass {{ mysql_root_password }} "
     when: mysql_info.failed is true
+
